Simplify the name compile-external-libs.sh to compilation

--- a/project/Makefile
+++ b/project/Makefile
@@ -423,5 +423,5 @@ SCRIPT_GIT_CLONE := $(PATH_MYMAKEFILE_SCRIPTS)/clone.sh
 SCRIPT_DOWNLOAD_THIRD_PARTIES := $(PATH_MYMAKEFILE_SCRIPTS)/download-external-libs.sh
 SCRIPT_COMPILE_THIRD_PARTIES := $(PATH_MYMAKEFILE_SCRIPTS)/compile-external-libs.sh
 PROJECT_MANIFEST_THIRD_PARTIES := $(THIRD_PARTIES_DIR)/manifest
-PROJECT_SCRIPT_COMPILE_THIRD_PARTIES := $(THIRD_PARTIES_DIR)/compile-external-libs.sh
+PROJECT_SCRIPT_COMPILE_THIRD_PARTIES := $(THIRD_PARTIES_DIR)/compilation
 SCRIPT_OBS := $(PATH_MYMAKEFILE_SCRIPTS)/obs.sh
