Update compilation, doc, license and user detection, fix demos
- Update doc README, API
- Detecte project license
- Detect user name
- Force user defining variables needed for compiling bundle applications
- Generate license on doxygen
- Fix demos compilation
- Fix SRC_FILES not compiled

--- a/doc/demos/00/Makefile
+++ b/doc/demos/00/Makefile
@@ -1,14 +1,24 @@
+###################################################
+# Location of the project directory and Makefiles
+#
+P := .
+M := ../../..
+
+###################################################
+# Project definition
+#
 PROJECT_NAME := TutorialMyMakefile
 PROJECT_VERSION := 0.1.0
 TARGET_NAME := HelloWorld00
 TARGET_DESCRIPTION := Hello Word
 COMPILATION_MODE := release
-
-P := .
-M := ../../..
 BUILD := ../../build
+
 include $(M)/project/Makefile
 
+###################################################
+# Compile the project
+#
 SRC_FILES += src/main.cpp
 
 include $(M)/rules/Makefile
