--- a/doc/demos/02/src/bar/Makefile
+++ b/doc/demos/02/src/bar/Makefile
@@ -1,14 +1,24 @@
+###################################################
+# Location of the project directory and Makefiles
+#
+P := ../..
+M := ../../../../..
+BUILD := ../../build
+
+###################################################
+# Project definition
+#
 PROJECT_NAME := TutorialMyMakefile
 PROJECT_VERSION := 0.1.0
 TARGET_NAME := bar
 TARGET_DESCRIPTION := library bar
 COMPILATION_MODE := release
 
-P := ../..
-M := ../../../../..
-BUILD := ../../build
 include $(M)/project/Makefile
 
+###################################################
+# Compile the library
+#
 INCLUDES := $(P)/include
 LIB_FILES := bar.cpp
 
