Fix regression sur le nom d'un fichier

--- a/project/Makefile
+++ b/project/Makefile
@@ -378,7 +378,7 @@ PROJECT_TESTS ?= tests
 PROJECT_INFO := project_info
 PROJECT_INFO_TXT := $(PROJECT_INFO).txt
 PROJECT_INFO_HPP := $(PROJECT_INFO).hpp
-GENERATED_HEADER_PROJECT_INFO := $(GENERATION_DIR)/$(PROJECT_INFO_FILE)
+GENERATED_HEADER_PROJECT_INFO := $(GENERATION_DIR)/$(PROJECT_INFO_HPP)
 
 #? Path to the default icon for MacOS bundle applications.
 ifeq ($(OS),Darwin)
