Fix all: goal never called #9
Force .DEFAULT_GOAL to be all because with DIRS_WITH_MAKEFILE we have to
use folder path to give a compilation order but these goals are set
before the all: goal and therefore loose its default status.

--- a/rules/Makefile
+++ b/rules/Makefile
@@ -50,6 +50,10 @@ endif
 .DELETE_ON_ERROR:
 .SUFFIXES:
 
+# Force the default goal to be all: else with DIRS_WITH_MAKEFILE we have to
+# set an order of compilation and the rules will be placed after the all: goal.
+.DEFAULT_GOAL := all
+
 ###############################################################################
 # C/C++ compilers
 ###############################################################################
